--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="https://jaimin78.github.io/Tic-Tac-Toe/css/style.css">
     <title>Tic Tac Toe</title>
 </head>
 <body>
@@ -30,10 +30,10 @@
                 <button id="reset">Reset</button>
             </div>
             <div class="imgbox">
-                <img src="img/Winning.gif" alt="">
+                <img src="https://jaimin78.github.io/Tic-Tac-Toe/img/Winning.gif" alt="">
             </div>
         </div>
    </div>
-    <script src="/js/script.js"></script>
+    <script src="https://jaimin78.github.io/Tic-Tac-Toe/js/script.js"></script>
 </body>
 </html>
